dnl Process this file with autoconf to produce a configure script.
AC_INIT(display.c)
AC_ARG_PROGRAM

PACKAGE=ImageMagick
VERSION=3.8.2

dnl Determine which C compiler is being used.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CHECK_FUNCS(strerror)

dnl Find the X11 include and library directories
AC_PATH_XTRA

dnl Checks for header files.
AC_STDC_HEADERS
AC_HEADER_DIRENT
AC_CHECK_HEADER(elf.h,AC_DEFINE(SVR4))
AC_CHECK_HEADER(hdf.h,AC_DEFINE(HasHDF))
AC_CHECK_HEADER(jbig.h,AC_DEFINE(HasJBIG))
AC_CHECK_HEADER(jpeglib.h,AC_DEFINE(HasJPEG))
AC_CHECK_HEADER(mpeg.h,AC_DEFINE(HasMPEG))
AC_CHECK_HEADER(png.h,AC_DEFINE(HasPNG))
AC_CHECK_HEADER(tiff.h,AC_DEFINE(HasTIFF))
AC_CHECK_HEADER(hdf.h,AC_DEFINE(HasHDF))

dnl Checks for plug-ins.
LIBS="$LIBS -lm"
AC_CHECK_LIB(z,inflate,LIBS="-lz $LIBS",,)
AC_CHECK_LIB(png,png_info_init,LIBS="-lpng $LIBS",,)
AC_CHECK_LIB(jpeg,jpeg_read_header,LIBS="-ljpeg $LIBS",,)
AC_CHECK_LIB(mpeg,GetMPEGInfo,LIBS="-lmpeg $LIBS",,)
AC_CHECK_LIB(tiff,TIFFOpen,LIBS="-ltiff $LIBS",,)
AC_CHECK_LIB(jbig,jbg_dec_init,LIBS="-ljbig $LIBS",,)
AC_CHECK_LIB(df,DFANgetlablen,LIBS="-ldf $LIBS",,)
AC_CHECK_LIB(dps,XDPSPixelsPerPoint,LIBS="-ldpstk -ldps $LIBS",,)
AC_CHECK_LIB(socket,socket,LIBS="-lsocket $LIBS",,)
AC_CHECK_LIB(Xext,XextCreateExtension,LIBS="-lXext $LIBS",,\$X_LIBS -lX11)
AC_CHECK_LIB(Xext,XShmAttach,AC_DEFINE(HasSharedMemory),,$X_LIBS -lX11)
AC_CHECK_LIB(Xext,XShapeCombineMask,AC_DEFINE(HasShape),,$X_LIBS -lX11)
AC_CHECK_LIB(dpstk,XDPSPixelsPerPoint,LIBS="-ldpstk -ldps $LIBS" AC_DEFINE(HasDPS),,\$X_LIBS -lX11)

AC_OUTPUT(Makefile magick/Makefile)
