dnl Process this file with autoconf to produce a configure script.
AC_INIT(scl.c)
AC_CONFIG_HEADER(scmconfig.h)

test -z "$CFLAGS" && CFLAGS=-g AC_SUBST(CFLAGS)
test -z "$LDFLAGS" && LDFLAGS=-g AC_SUBST(LDFLAGS)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_CPP
AC_PROG_RANLIB
AC_AIX
AC_ISC_POSIX
AC_MINIX
AC_STDC_HEADERS
AC_HAVE_HEADERS(unistd.h string.h memory.h limits.h time.h sys/types.h sys/time.h sys/timeb.h sys/times.h)
AC_TIME_WITH_SYS_TIME
AC_HAVE_FUNCS(ftime times getcwd)
AC_RETSIGTYPE
AC_CONST
AC_MINUS_C_MINUS_O
dnl AC_PREFIX(scm)

AC_SUBST(LIBOBJS)

AC_OUTPUT(Makefile)

dnl Local Variables:
dnl comment-start: "dnl "
dnl comment-end: ""
dnl comment-start-skip: "\\bdnl\\b\\s *"
dnl compile-command: "make configure scmconfig.h.in"
dnl End:
